# mailchimp-getsegment

./: LICENSE  README.md  action.yml  main.py  pyproject.toml
