[tool.poetry]
name = "mailchimp-getsegment"
version = "0.1.0"
description = ""
authors = ["Steve Hall <srhusa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mailchimp-marketing = "^3.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
